# gamescope-x11-client

./: Cargo.toml
src/: atoms.rs  lib.rs  x11.rs  xwayland.rs
