[package]
name = "gamescope-x11-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.3"
x11rb = { version = "0.13.0", features = ["all-extensions"] }
